@@ -56,6 +56,8 @@ Improvements:
    existed actually. since these parts are really dependent on the platform,
    in most case they don't need all parts at the same time.
    * Enhanced diskselector add and item_append time.
+   * Expand elm_transit_tween_mode ELM_TRANSIT_TWEEN_MODE_DIVISOR_INTERP, ELM_TRANSIT_TWEEN_MODE_BOUNCE, ELM_TRANSIT_TWEEN_MODE_SPRING
+   * Added new APIs elm_transit_tween_mode_facator_set()/get()
 
 Fixes:
 
